// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TitleBlock match snapshot PageTitle simple 1`] = `
<div>
  <div
    class="css-1smabgz"
  >
    Hello World
  </div>
  <div
    class="css-6sa163"
  >
    <div
      class="css-l7et16"
    >
      Hello
    </div>
  </div>
</div>
`;

exports[`TitleBlock match snapshot PageTitle with Composant on Children 1`] = `
<div>
  <div
    class="css-1smabgz"
  >
    Hello World
  </div>
  <div
    class="css-6sa163"
  >
    <div
      class="css-l7et16"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-13u4ebv-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Hello world
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;
